# AutoWeeklyTickerReport

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup_project.sh
app/controllers/: data_controller.py  sentiment_controller.py
app/models/: news_model.py  ohlcv_model.py
app/utils/: create_tables.py  data_fetcher.py  report_generator.py
app/views/: report_view.py
docs/: index.md
tests/: test_controllers.py  test_models.py  test_utils.py  test_views.py
