[tool.poetry]
name = "autoweeklytickerreport"
version = "0.1.0"
description = ""
authors = ["Alan Lanceloth <alan.lanceloth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
yfinance = "^0.2.40"
requests = "^2.32.3"
openai = "^1.35.10"
loguru = "^0.7.2"
pytest = "^8.2.2"
sqlalchemy = "^2.0.31"
duckdb = "^1.0.0"
fastparquet = "^2024.5.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
